--- a/.gitignore
+++ b/.gitignore
@@ -35,13 +35,13 @@ jspm_packages
 .npm
 
 # Optional REPL history
-.node_repl_history
-
-
+.node_repgitl_history
+config.py
+HackCU
 ### WebStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.idea
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
