--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pycrypto==2.6.1
 python-axolotl==0.1.34
 python-axolotl-curve25519==0.1
 python-dateutil==2.5.2
+python-firebase==1.2
 requests==2.9.1
 requests-oauthlib==0.6.1
 six==1.10.0
