--- a/angular-seed/bower.json
+++ b/angular-seed/bower.json
@@ -11,5 +11,18 @@
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0"
-  }
+  },
+  "authors": [
+    "Lgueg28 <loic.guegan@colorado.edu>"
+  ],
+  "main": "",
+  "moduleType": [],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "app/bower_components",
+    "test",
+    "tests"
+  ]
 }
